syntax = "proto3";

option go_package = "n0st.ac/n0stack/iam/v1alpha;piam";

package n0stack.iam.v1alpha;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "n0stack";
    contact: {
      name: "n0stack";
      url: "https://github.com/n0stack/n0stack";
    }
  }
  
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};


message User {
  // Name is a unique field.
  string name = 1;

  // Annotations can store metadata used by the system for control.
  // In particular, implementation-dependent fields that can not be set as protobuf fields are targeted.
  // The control specified by n0stack may delete metadata specified by the user.
  map<string, string> annotations = 3;

  // Labels stores user-defined metadata.
  // The n0stack system must not rewrite this value.
  map<string, string> labels = 4;

  string display_name = 9;

  map<string, string> public_keys = 33;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/api/v1alpha/user/{name}"
    };
  }

  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/v1alpha/user/{name}"
      body: "*"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      put: "/api/v1alpha/user/{name}"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1alpha/user/{name}"
    };
  }

  rpc AddPublicKey(AddPublicKeyRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/v1alpha/user/{user_name}/public_key/{public_key_name}"
      body: "*"
    };
  }
  
  rpc DeletePublicKey(DeletePublicKeyRequest) returns (User) {
    option (google.api.http) = {
      delete: "/api/v1alpha/user/{user_name}/public_key/{public_key_name}"
    };    
  }
}


message GetUserRequest {
  string name = 1;
}

message CreateUserRequest {
  string name = 1;
  map<string, string> annotations = 3;
  map<string, string> labels = 4;

  string display_name = 32;
}

message UpdateUserRequest {
  string name = 1;
  map<string, string> annotations = 3;
  map<string, string> labels = 4;

  string display_name = 32;
}

message DeleteUserRequest {
  string name = 1;
}

message AddPublicKeyRequest {
  string user_name = 1;
  string public_key_name = 2;
  string public_key = 3;
}
message DeletePublicKeyRequest {
  string user_name = 1;
  string public_key_name = 2;
}
